chore: code cleanup and adapt to Quarkus 3.36.1 API changes
Migrate MockMailbox from getMessagesSentTo() to getMailMessagesSentTo(),
add private constructors to @CheckedTemplate inner classes, and remove
stray blank lines after opening braces throughout the codebase.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>